# amortised-annealing

./: .gitignore  README.md  pyproject.toml
configs/: example.yaml
configs/models/: ackley_d10_beta0p1_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d10_beta0p25_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d10_beta0p25_ula_seed1_mlp256x3_eps_seed1.yaml  ackley_d10_beta0p25_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta0p5_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d10_beta1_ula_seed1_mlp256x3_eps_seed1.yaml  ackley_d10_beta1_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta3_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta6_ula_seed1_mlp256x3_eps_seed1.yaml  ackley_d10_beta6_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta7_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d10_beta7_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta8_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d10_beta9_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d20_beta0p1_ula_seed1_mlp256x3_eps_seed1.yaml  ackley_d20_beta0p5_ula_seed0_mlp256x3_eps_seed0.yaml  ackley_d20_beta0p5_ula_seed2_mlp256x3_eps_seed2.yaml  ackley_d20_beta1_ula_seed1_mlp256x3_eps_seed1.yaml  ackley_d20_beta2_ula_seed0_mlp256x3_eps_seed0.yaml  (+275 more)
data/: ackley_sweep_results.json  double_well_sweep_results.json  rastrigin_sweep_results.json
scripts/: backfill_samples.py  create_sampler_configs.py  create_training_configs.py  data_dump.py  diagnose_score.py  eval_model.py  run_annealing.py  run_energy_sweep.py  run_experiment.py  run_rastrigin_sweep.py  run_sampling.py  run_training.py  test_reverse_sde.py
scripts/experiments/: break_even.py  (+10 more)
(+8376 files in other folders)
