[project]
name = "amortised-annealing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "siddhantgadkari", email = "svg21@ic.ac.uk" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
amortised-annealing = "amortised_annealing:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
