[project]
name = "amortised-annealing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "siddhantgadkari", email = "svg21@ic.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "torch>=2.12.0",
    "tqdm>=4.67.3",
]

[project.scripts]
amortised-annealing = "amortised_annealing:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
